--- a/OfO/OfO/Info.plist
+++ b/OfO/OfO/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSCameraUsageDescription</key>
+	<string> 小黄车需要使用您的相机</string>
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string>小黄车需要使用您的位置,快允许啊!</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
