车辆解锁码控制器

--- a/OfO/Podfile
+++ b/OfO/Podfile
@@ -13,6 +13,7 @@ target 'OfO' do
  pod 'AMapSearch'
  pod 'AMapNavi'
  pod 'FTIndicator'
- pod 'APNumberPad' 
+ pod 'APNumberPad'
+ pod 'SwiftyTimer'
 
 end
